change animation to avoid display issue on Safari

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -580,7 +580,7 @@ a {
   width: 60px;
   height: 60px;
   opacity: 0;
-  transform: rotateY(90deg);
+  transform: scale(0);
   filter: contrast(0%) brightness(50%) invert(100%) drop-shadow(0 0 1px #aaa);
 }
 
